# Projects

./: README.md
AI based firewall/: K Nearest Neighbour.py  log_parser.py  log_parser_extended.py  rawweb.py
BlueROV2 submersible-Position Control/: BlueROV2_model.slx  FOZN_BlueROV2_Control.slx  FOZN_PID.m  FOZN_controllers.m  Fractional_contr.m  Plotting_pose.m  RelayTest_controllerCalc.m  RelayZN_BlueRVO2_Control.slx  iden_sin_real.slx  sine_test_sin_ideal.slx
Csharp_CarRacingGame/: Program.cs  README.md  project_ii_v3.csproj  project_ii_v3.sln
Deep CNN implementation for object recognition/: CNNBlock.py  Constants.py  Dataset.py  HelperFunctions.py  ResidualBlock.py  ScalePrediction.py  TestScript.py  TrainFunction.py  TrainScript.py  YOLOLoss.py  YOLOv3.py  main.py
LabView_MorseCode_coding_decoding/: Codul morse_prezentare.pptx
NN from scratch for character recognition/: Functions.py  Network.py  digit_recognition.py
Optimizations/: EliminationMethod.m  LagrangeMultipliers.m  NelderMead_script.m  NewtonMethod_adaptation.m  QuadraticProgramming.m  SimpleAnalyticalMethods.m
Particle Swarm optimization/: Func_tobe_optimised.m  pso.m
Reinforcement Learning/: Q-Learning.ipynb  (+3 more)
Sonoptix Sonar Driver for ROS/: CMakeLists.txt  README.md  package.xml
Sonoptix Sonar Driver for ROS/src/: publish_sonar_data.py  sonoptix_driver_GUI.py  sonoptix_driver_node.py  sonoptix_driver_node2test.py
Sonoptix Sonar Driver for ROS/src/config_example/: bad_config_ex.yaml  config.yaml  endpoints.txt
Sonoptix Sonar Driver for ROS/src/sonoptix_driver/: config_manager.py  sonoptix_driver.py  sonoptix_http.py  sonoptix_udp.py
Sonoptix Sonar Driver for ROS/src/sonoptix_driver/utils/: helper_functions.py
Sonoptix Sonar Driver for ROS/srv/: SetConfig.srv
(+271 files in other folders)
