<?xml version="1.0"?>
<package format="2">
  <name>sonoptix_pkg</name>
  <version>0.0.1</version>
  <description>The sonoptix_pkg package provides a simple way to send config parameters to the sonoptix sonar and also to publish ROS messages containing raw data defined in the package collection called api_ocean_engineering</description>

  <maintainer email="tudor_alinei@yahoo.com">Tudor Alinei-Poiana</maintainer>
  <license>TODO</license>
  <author email="tudor_alinei@yahoo.com">Tudor Alinei-Poiana</author>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/sonoptix_pkg</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>marine_acoustic_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>marine_acoustic_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>marine_acoustic_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
